# rustemu

./: .gitignore  Cargo.toml  README.md  build.rs
src/: arg_parse.rs  cartridge.rs  console.rs  constants.rs  cpu.rs  input.rs  main.rs  memory.rs  read_rom.rs
src/console/: audio.rs  bit_utils.rs  bus.rs  cartridge.rs  constants.rs  cpu.rs  display.rs  dma.rs  gameboy.rs  hw_register.rs  instruction.rs  instruction_operands.rs  interrupt.rs  memory.rs  mod.rs  register.rs  timer.rs
src/console/cpu/: cpu.rs  cpu_tests.rs  decoder.rs  instruction.rs  instruction_operands.rs  mod.rs  register.rs
src/console/gui/: display.rs  gpu.rs  gui.rs  input.rs  mod.rs
src/console/utils/: bit_utils.rs  mod.rs  utils.rs
