[package]
name = "rustemu"
version = "0.2.0"
edition = "2024"
build = "build.rs"


[target.'cfg(not(target_os = "uefi"))'.dependencies]
lexopt = "0.3.2"
minifb = "0.28.0"
log = "0.4.28"
xtask = "0.1.0"

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { version = "0.35.0", features = ["logger", "panic_handler"] }
log = { version = "0.4", default-features = false }


[dependencies]
cfg-if = "1.0.4"
